objects/sumoapp__ResourceConfiguration__c.object
<CustomObject>
    <fields>
        <fullName>sumoapp__AssignmentEngine__c</fullName>
        <label>Assignment Engine</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SYSTEM_AUTO_ASSIGN</fullName>
                    <default>true</default>
                    <label>System Auto-Assign</label>
                </value>
                <value>
                    <fullName>USER_FILTER_SYSTEM_AUTO_ASSIGN</fullName>
                    <label>User Filter &amp; System Auto-Assign</label>
                </value>
                <value>
                    <fullName>USER_CHOOSE</fullName>
                    <label>User Filter &amp; Assign Resource</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__FieldsToDisplay__c</fullName>
        <label>Fields To Display</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__FiltersLabel__c</fullName>
        <label>Filters Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>sumoapp__Location__c</referenceTo>
        <relationshipLabel>Resource Configurations</relationshipLabel>
        <relationshipName>Resource_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SUMO Scheduling Process</label>
        <referenceTo>sumoapp__Process__c</referenceTo>
        <relationshipLabel>Resource Configurations</relationshipLabel>
        <relationshipName>Resource_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__ResultLabel__c</fullName>
        <label>Result Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__SearchCriteria__c</fullName>
        <label>Search Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__SubHeader__c</fullName>
        <label>Sub Header</label>
        <type>TextArea</type>
    </fields>
    <label>SUMO Resource Configuration</label>
    <nameField>
        <displayFormat>RC{000}</displayFormat>
        <label>Resource Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SUMO Resource Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>sumoapp__AssignmentEngineIsRequired</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(TEXT(sumoapp__AssignmentEngine__c))</errorConditionFormula>
        <errorDisplayField>sumoapp__AssignmentEngine__c</errorDisplayField>
        <errorMessage>Assignment Engine is required</errorMessage>
    </validationRules>
</CustomObject>